fix: weird sizing on iphones

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	min-height: 100vh;
 	background: rgb(220, 255, 255);
 }
 
